# transportation-routing

./: .gitignore  .gitmodules  CHANGELOG.md  CODEOWNERS  README.md
.github/workflows/: issue-labeler-node16.yml  issue-labeler.yml
context/: README.md  commit-guidelines.md
context/notes/: binary_format_sample_code.md  binary_format_specification.md  comment_analysis_kevin_kreiser_1.md  comment_analysis_kevin_kreiser_2_part1.md  comment_analysis_kevin_kreiser_2_part2.md  comment_analysis_rob_haley_1.md  comment_analysis_rob_haley_2.md  key_findings_from_comments.md  pr_comments_analysis.md  pr_review_comments.md  valhalla_binary_format_analysis.md  valhalla_temporary_binary_files_analysis.md
context/overture/: schema_documentation.md
context/plan/: engineering_plan_outline.md  integration_approach.md
context/valhalla/: repository_reference.md
docs/books/overture-graph-tiles/: book.toml
docs/books/overture-graph-tiles/src/: 01_valhalla_tiled_structure.md  06_hierarchical_graph_building.md  07_costing_and_edge_attribution.md  10_binary_tile_format.md  12_dependencies_and_integration.md  14_performance_optimization.md  15_graph_traversal_and_connectivity.md
docs/books/valhalla-mjolnir/: book.toml  mermaid-init.js  mermaid.css
docs/books/valhalla-mjolnir/src/: 00_introduction.md  01_valhalla_tiled_structure.md  02_osm_data_processing.md  03_graph_construction_process.md  04_core_data_structures.md  05_tile_creation_and_management.md  08_special_cases_and_features.md  09_lane_handling_and_turn_lanes.md  11_turn_restrictions_and_maneuvers.md  13_building_your_own_graph_tile_builder.md  13_overture_transportation_schema.md  14_integration_approaches.md  14_osm_tag_processing.md  14_performance_optimization_part2.md  14_performance_optimization_part3.md  15_attribute_mapping.md  16_performance_optimization.md  17_conclusion_and_next_steps.md  SUMMARY.md
docs/books/valhalla-mjolnir/theme/: pdf.css
docs/research/: admin_boundaries.md
docs/rfc/01-overture-graph-tiles/: APPENDIX.md  README.md  valhalla-overture-attribute-mapping.md  valhalla-overture-entity-mapping.md
docs/rfc/02-overture-express/: IMPLEMENTATION_ROADMAP.md  README.md  TECHNICAL_SPEC.md
omf-bifrost/: .gitignore  Cargo.toml  DEVELOP.md  Dockerfile  README.md  deny.toml  justfile  rustfmt.toml
omf-bifrost/cli/: Cargo.toml
omf-bifrost/cli/src/: main.rs
omf-bifrost/examples/: download.rs
omf-bifrost/overture-access-restriction-splitter/: Cargo.toml
omf-bifrost/overture-access-restriction-splitter/src/: lib.rs  restriction_splitter.rs  tests.rs
omf-bifrost/overture-bifrost/: Cargo.toml
omf-bifrost/overture-bifrost/src/: lib.rs  main.rs
omf-bifrost/overture-bifrost/src/admin/: mod.rs
omf-bifrost/overture-bifrost/src/cli/: mod.rs
omf-bifrost/overture-bifrost/src/core/: mod.rs
omf-bifrost/overture-bifrost/src/io/valhalla/: mapping.rs  mod.rs
omf-bifrost/overture-bifrost/src/utils/: download.rs
omf-bifrost/overture-express/: Cargo.toml  build.rs
omf-bifrost/overture-express/schema/: transportation.capnp
omf-bifrost/overture-express/src/: lib.rs
omf-bifrost/overture-tiles/: Cargo.toml
omf-bifrost/overture-tiles/src/: lib.rs
omf-bifrost/overture-types/: Cargo.toml
omf-bifrost/overture-types/src/: connector.rs  lib.rs  properties.rs  segment.rs
omf-bifrost/overture-valhalla-writer/: Cargo.toml  build.rs
omf-bifrost/overture-valhalla-writer/c/: osmdata.c  osmdata.h  osmdata_gen.c  osmnode.c  osmnode.h  osmnode_gen.c  osmway.c  osmway.h  osmway_gen.c
omf-bifrost/overture-valhalla-writer/c_code/: valhalla.h
omf-bifrost/overture-valhalla-writer/src/: bindings.rs  lib.rs  osm.rs  restriction_splitter.rs  utils.rs  valhalla.h  valhalla_sys.rs  writer.rs
omf-bifrost/src/: lib.rs  main.rs
omf-bifrost/src/admin/: config.rs
omf-bifrost/src/cli/: mod.rs
omf-bifrost/src/core/: mod.rs
omf-bifrost/src/utils/: download.rs  logging.rs  mod.rs
omf-bifrost/tests/: admin_integration.rs
omf-bifrost/tests/data/: hk-division-areas.parquet  hk-divisions.parquet  tokio-division-areas.parquet  tokio-divisions.parquet  wa-division-areas.parquet  wa-divisions.parquet
omf-bifrost/valhalla-sys/: Cargo.toml
omf-bifrost/valhalla-sys/src/: lib.rs
