[workspace]
members = [
    "overture-bifrost",
    "overture-types", 
    "overture-tiles"
]
resolver = "2"

# Shared workspace configuration
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Swagata Prateek <pswagata@amazon.com>", "Overture Maps Foundation"]
license = "MIT"
repository = "https://github.com/OvertureMaps/transportation-routing"
keywords = ["overture", "maps", "routing", "valhalla", "transportation"]

# Shared dependencies across workspace
[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "2.0.12"

# Logging
log = "0.4"
env_logger = "0.11.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command line (for CLI crate)
clap = { version = "4.4", features = ["derive"] }

# Database dependencies
duckdb = "1.3.0"
rusqlite = { version = "0.36.0", features = ["load_extension"] }

# Data processing
arrow = "55.1.0"
parquet = "55.1.0"

# Progress reporting
indicatif = "0.17"

# Testing
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
