[workspace]
members = [
    "overture-bifrost",
    "overture-express",
    "overture-types", 
    "overture-tiles"
]
resolver = "3"

# Shared workspace configuration
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Swagata Prateek <pswagata@amazon.com>", "Overture Maps Foundation"]
license = "MIT"
repository = "https://github.com/OvertureMaps/transportation-routing"
keywords = ["overture", "maps", "routing", "valhalla", "transportation"]

[workspace.dependencies]
anyhow = "1.0"
arrow = "55.1.0"
assert_cmd = "2.0"
clap = { version = "4.4", features = ["derive"] }
duckdb = "1.3.0"
env_logger = "0.11.8"
indicatif = "0.17"
log = "0.4"
overture-types = { path = "overture-types", version = "0.1.0" }
parquet = "55.1.0"
predicates = "3.0"
rusqlite = { version = "0.36.0", features = ["load_extension"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
thiserror = "2.0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
