[package]
name = "overture-bifrost"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for converting Overture Maps transportation data to Valhalla routing tiles"
keywords.workspace = true
categories = ["data-structures", "algorithms"]

[[bin]]
name = "overture-bifrost"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arrow.workspace = true
clap.workspace = true
duckdb.workspace = true
env_logger.workspace = true
indicatif.workspace = true
log.workspace = true
overture-types.workspace = true
parquet.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
