[package]
name = "overture-valhalla-writer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust/C library for converting Overture map data to Valhalla binary format"
keywords.workspace = true
categories = ["overture", "map", "routing", "valhalla"]

[dependencies]
# Workspace dependencies
parquet.workspace = true
geozero.workspace = true
geo-types.workspace = true

[build-dependencies]
bindgen.workspace = true
